--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -141,6 +141,20 @@ Conditional probability; the models
 
 # F. Conclusion
 
+The 'minute and extensive scrutinizing' [@Dewey_1957] of a recommender system undergoing a conversion from an older data-mining approach to a current 'personal relevance model' approach addresses a specific situation: online grocery shopping (not shopping in general) and the ordering of lists.
+
+The theory of shopping lists constructed at the beginning of the paper was a scaffolding component. It draws on anthropology, sociology and mathematics to suggest that we see shopping lists as the site of a complex negotiation between different social orders. The list itself as an inscriptive device functions as an ordering device, a device that accommodates an immense variety of specific habits, dispositions, values and associations. The mapping component of the list, the order that arranges the set of items according to different interests and aims, is the operational focus of recommender systems.      
+
+The personalization of recommendations has been a defining characteristic of many big data conversion events. Rightly, the effects of all-consuming personalization have been the target of critics and critical research. The archaeology of the Tesco recommender system, including its early experiments with demographic data-mining, its adoption of a rule-based 'market basket' analysis system, and its current implementation of a 'personal relevance model' certainly follows that trajectory.   But the conversion event is not reducible to personalization.
+
+Probabilization precedes personalization. When we observe what is practically done to construct a personal relevance model and apply it to a shopping list, we see, conditional probabilities, predictive models, the importance of data accumulated over time,  platform experiences, the rhythms of infrastructural maintenance, and open-ended construction of new features in data, all of which negotiate shifting and complicated associations between people and things, people and people, and things with things. If social order is made of associations, is to be social is to associate, then the forms of association taking shape in this and other similar conversion events might be understood as understand as operationalizing probability in matrices of propensity. As Popper argues, probabilities are being realized in the same way that fields of force were realized in modern physics. Probabilization does not take place in physics laboratories but on platforms, combining databases, compute capacity, interfaces and global supply chain logistics. 
+
+The fact that probabilisation largely takes the form of personalization tends to obscure the re-framing of social order taking place. This ordering  depends on  the mappings that inscriptive devices such as shopping lists  display. Only because shopping is already somewhat ordered by lists can a partial re-mapping, provisionally conducive to new events, take place. The conversion entailed in this re-mapping is not just about perosnalization. It is more ontological than that since it includes relations running multi-laterally between people and things in time. It is less ontological, however, in that it is not a sudden transformation, but an ongoing process of adjusting, scaffolding, intervening and configuring orders.  
+
+Reconstructions of specific conversion events associated with big data can work in different ways. The combination of social theory, archaeology, philosophy and model/data prototypes used in this paper sketches one possible way of addressing the trouble, the disturbance or instability that seems to affect many discussions of big data. 
+
+------------
+
 In their mundane intersectional practices of ordering, recommender systems show how  predictive practices affect existing forms of social order in the world. Rather than directly positing an ontological transformation (as Hansen does), or pointing to the erosion of social order (as Turow does), I have explored some of the conversion events associated with a shift from a data-mining rule-based system to a predictive recommender system. The DunnHumby model and the Tesco 'Have You Forgotten?' recommendations present many of the traits of the conversion processes associated with big data. Rather than discontinuous changes, the conversion of the recommender system via a relevance model suggests an ongoing problematization of propensities. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of propensities and conditionalities, warping over time. The predictive assemblages connect logistical ensembles to the negotiation, compromises, rituals and local orderings of everyday life.
 
 I have been suggesting that predictive listing in the form of open-ended recommendation changes social order. It establishes a common coding between machinic and ritual repetition (as exemplified in the shopping list).  It also suggests some ways in which repetition or reiteration  can also participate in changing and emergent order. By understanding the world in terms of propensities, we have a chance  to engage with contemporary predictive processes in ways that both acknowledge their relentless and exhausting pressure to consume more and retain some chance of inhabiting the world differently. 
